--- a/WEB/html/aula1-2.html
+++ b/WEB/html/aula1-2.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="G:\curso senac hub dev\Exercicios_Python\WEB\html\pokeball.png" type="image/png">
-    
-<!--<link rel="icon" href="./images/bola.png" type="image/png">
-acima funciona no meu proj-->
+    <link rel="icon" href="./images/bola.png" type="image/png">
 
     <title>
         Titulo da pagina
@@ -18,7 +15,7 @@ acima funciona no meu proj-->
     </h1>
 
 
-<base href="https://ms.senac.br/">
+
 
 </head>
 <body>
