--- a/WEB/html/aula2.html
+++ b/WEB/html/aula2.html
@@ -44,7 +44,7 @@
 
     <p>paragrafo/texto</p>
 
-    <p title="É um lorem">Passa o mouse np Lorem ipsum do pai, dolor sit amet consectetur 
+    <p title="É um lorem">Passa o mouse no Lorem ipsum do pai, dolor sit amet consectetur 
         adipisicing elit. Deleniti, eius magnam! Temporibus perspiciatis saepe eos
         nihil vitae nisi laudantium dolorum molestiae ullam, rem, 
         voluptatum alias labore fuga ipsum fugiat dolor!</p>
