--- a/WEB/html/aula4/atv4/pages/educacao.html
+++ b/WEB/html/aula4/atv4/pages/educacao.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Educação</title>
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
     
@@ -25,6 +26,9 @@
         <b>Nome da Instituição:</b> Centro Universitário Anhanguera Campo Grande unidade 1<br>
         <b>Degree:</b> Bacharel em Relações Internacionais <br>
         <b>Ano de Conclusão:</b> 2017<hr>
+    </p>
+    
+    <p>
         <b>Nome da Instituição:</b> Senac Hub Academy<br>
         <b>Degree:</b> Técnico em Desenvolvimento de Software <br>
         <b>Ano de Conclusão:</b> 2024<hr>
