--- a/WEB/CSS/aula4/atv4/pages/referencias.html
+++ b/WEB/CSS/aula4/atv4/pages/referencias.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resumo Profissional</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <title>Referências</title>
 </head>
 <body>
     <nav>
@@ -18,12 +17,9 @@
         <a href="../pages/referencias.html">Referências</a>
 
     </nav>
-        <hr>
-    <h2>Resumo Profissional</h2>
-    <p>Experiência em atendimento ao público e agora em transição de carreira para a área de T.I</p>
-    
-        <hr>
-
-    
+    <hr>
+    <h2>Referências</h2>
+    <p>Disponível mediante solicitação</p>
+    <hr>
 </body>
 </html>
