update casa 07/12 css

--- a/WEB/CSS/atividade 1/atv1 curriculo css/pages/dados_pessoais.html
+++ b/WEB/CSS/atividade 1/atv1 curriculo css/pages/dados_pessoais.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Educação</title>
+    <title>Dados Pessoais</title>
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
-    
     <nav>
         <a href="../index.html">Home|</a>
         <a href="../pages/dados_pessoais.html">Dados pessoais|</a>
@@ -18,19 +18,14 @@
         <a href="../pages/referencias.html">Referências</a>
 
     </nav>
-
+    
     <hr>
-    <h2>Educação</h2>
     <p>
-        <b>Nome da Instituição:</b> Centro Universitário Anhanguera Campo Grande unidade 1<br>
-        <b>Degree:</b> Bacharel em Relações Internacionais <br>
-        <b>Ano de Conclusão:</b> 2017<hr>
-        <b>Nome da Instituição:</b> Senac Hub Academy<br>
-        <b>Degree:</b> Técnico em Desenvolvimento de Software <br>
-        <b>Ano de Conclusão:</b> 2024<hr>
+        <b>Endereço:</b> Campo Grande - MS, Rua Sargento Cecilio Yule, 97 , Bairro Amambaí<br>
+        <b>Telefone:</b><a href="https://wa.me/5567992913452"> (67)992913452</a><br>
+        <b>Email:</b><a href="mailto:igorluis_k2@hotmail.com"> igorluis_k2@hotmail.com</a> <br>
+        <b>Linkedin:</b><a href="https://www.linkedin.com/in/igorluisk2" target="_blank"> Igor Luís</a><hr>
     </p>
-
-
 
 </body>
 </html>
