--- a/WEB/CSS/atividade 1/atv1 curriculo css/pages/educacao.html
+++ b/WEB/CSS/atividade 1/atv1 curriculo css/pages/educacao.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Habilidades Técnicas</title>
+    <title>Educação</title>
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
     
@@ -20,12 +21,18 @@
     </nav>
 
     <hr>
-    <h2>Habilidades Técnicas</h2>
-    <ul>
-        <li>Html</li>
-        <li>Python</li>
-        <li>Pacote Office</li>
-    </ul><hr>
+    <h2>Educação</h2>
+    <p>
+        <b>Nome da Instituição:</b> Centro Universitário Anhanguera Campo Grande unidade 1<br>
+        <b>Degree:</b> Bacharel em Relações Internacionais <br>
+        <b>Ano de Conclusão:</b> 2017<hr>
+    </p>
+    
+    <p>
+        <b>Nome da Instituição:</b> Senac Hub Academy<br>
+        <b>Degree:</b> Técnico em Desenvolvimento de Software <br>
+        <b>Ano de Conclusão:</b> 2024<hr>
+    </p>
 
 
 
