--- a/WEB/CSS/atividade 1/atv1 curriculo css/pages/habilidades_tecnicas.html
+++ b/WEB/CSS/atividade 1/atv1 curriculo css/pages/habilidades_tecnicas.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Idiomas</title>
+    <title>Habilidades Técnicas</title>
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
+    
     <nav>
         <a href="../index.html">Home|</a>
         <a href="../pages/dados_pessoais.html">Dados pessoais|</a>
@@ -19,12 +21,13 @@
     </nav>
 
     <hr>
-    <h2>Idiomas</h2>
-    <p>
-        Inglês: avançado <br>
-        Japonês: básico
-    </p>
-    <hr>
+    <h2>Habilidades Técnicas</h2>
+    <ul>
+        <li>Html</li>
+        <li>Python</li>
+        <li>Pacote Office</li>
+    </ul><hr>
+
 
 
 </body>
