--- a/WEB/CSS/atividade 1/atv1 curriculo css/pages/resumo_profissional.html
+++ b/WEB/CSS/atividade 1/atv1 curriculo css/pages/resumo_profissional.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dados Pessoais</title>
+    <title>Resumo Profissional</title>
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
     <nav>
@@ -17,14 +18,12 @@
         <a href="../pages/referencias.html">Referências</a>
 
     </nav>
+        <hr>
+    <h2>Resumo Profissional</h2>
+    <p>Experiência em atendimento ao público e agora em transição de carreira para a área de T.I</p>
     
-    <hr>
-    <p>
-        <b>Endereço:</b> Campo Grande - MS, Rua Sargento Cecilio Yule, 97 , Bairro Amambaí<br>
-        <b>Telefone:</b><a href="https://wa.me/5567992913452"> (67)992913452</a><br>
-        <b>Email:</b><a href="mailto:igorluis_k2@hotmail.com"> igorluis_k2@hotmail.com</a> <br>
-        <b>Linkedin:</b><a href="https://www.linkedin.com/in/igorluisk2" target="_blank"> Igor Luís</a><hr>
-    </p>
+        <hr>
 
+    
 </body>
 </html>
