--- a/WEB/CSS/atividade 1/atv1 curriculo css/pages/idiomas.html
+++ b/WEB/CSS/atividade 1/atv1 curriculo css/pages/idiomas.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Referências</title>
+    <title>Idiomas</title>
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
     <nav>
@@ -17,9 +18,15 @@
         <a href="../pages/referencias.html">Referências</a>
 
     </nav>
+
     <hr>
-    <h2>Referências</h2>
-    <p>Disponível mediante solicitação</p>
+    <h2>Idiomas</h2>
+    <p>
+        Inglês: avançado <br>
+        Japonês: básico
+    </p>
     <hr>
+
+
 </body>
 </html>
