--- a/WEB/CSS/atv1 curriculo css/pages/habilidades_tecnicas.html
+++ b/WEB/CSS/atv1 curriculo css/pages/habilidades_tecnicas.html
@@ -23,9 +23,9 @@
     <hr>
     <h2>Habilidades Técnicas</h2>
     <ul>
-        <li>Html</li>
-        <li>Python</li>
-        <li>Pacote Office</li>
+        <li>html</li>
+        <li>python</li>
+        <li>pacote office</li>
     </ul><hr>
 
 
