--- a/WEB/html/extxt.html
+++ b/WEB/html/extxt.html
@@ -73,21 +73,21 @@
     <h2>Formulário:</h2>
     <form action="/seu/endpoint" method="post">
         <label for="nome">Nome:</label>
-        <imput type="text" id="nome" name="nome" required>
+        <input type="text" id="nome" name="nome" required>
 
         <label for="email">Email:</label>
-        <imput type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email" required>
 
         <label for="idade">Idade:</label>
-        <imput type="number" id="idade" name="idade" required>
+        <input type="number" id="idade" name="idade" required>
 
         <label for="cidade">Cidade:</label>
-        <imput type="text" id="cidade" name="cidade" required>
+        <input type="text" id="cidade" name="cidade" required>
 
         <label for="mensagem">Mensagem:</label>
         <textarea id="mensagem" name="mensagem" required></textarea>
 
-        <imput type="submit" value="Enviar">
+        <input type="submit" value="Enviar">
     </form>
 
     <h2>Parágrafos:</h2>
