--- a/php/aula2/ex2/index.html
+++ b/php/aula2/ex2/index.html
@@ -17,17 +17,17 @@
             <p>Endereço: <input type="text" name="endereco" id="endereco" size="20" maxlength="20" placeholder="Ex: Rua dos Porco Loco"></p>
             <p>Idade: <input type="number" name="idade" id="idade" size="2" maxlength="2" placeholder="EX: 27"></p>
             <p>Data: </p> <input type="date" name="data" id="data" size="20" maxlength="20" placeholder="14/03/2024">
-            <p>Época do ano:</p>
+            <p>Época do ano favorita:</p>
             <input type="checkbox" name="estacao[]" id="outono" value="Outono">
             <label for="outono">Outono</label>
-            <input type="checkbox" name="estacao[]" id="inveno" value="Inverno">
+            <input type="checkbox" name="estacao[]" id="inverno" value="Inverno">
             <label for="inverno">Inverno</label>
             <input type="checkbox" name="estacao[]" id="primavera" value="Primavera">
             <label for="primavera">Primavera</label>
             <input type="checkbox" name="estacao[]" id="verao" value="Verao">
             <label for="verao">Verão</label>
             <p>Gênero:</p>
-            <input type="radio" name="genero" id="masculino" value="Masculino">
+            <input type="radio" name="genero" id="masculino" value="Masculino" checked="checked" >
             <label for="masculino">Masculino</label><br>
             <input type="radio" name="genero" id="feminino" value="Feminino">
             <label for="feminino">Feminino</label><br>
